# backend-hunter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/backend_hunter/: main.py
src/backend_hunter/application/: bulk_scan.py  ports.py  use_cases.py
src/backend_hunter/domain/: entities.py  enums.py
src/backend_hunter/infrastructure/analysis/: analyzer_service.py  location_detector.py  tech_detector.py
src/backend_hunter/infrastructure/api/: main.py  schemas.py
src/backend_hunter/infrastructure/cli/: app.py
src/backend_hunter/infrastructure/scraping/: scraper.py
